adds styling changes, on user interaction with action buttons.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 						<select name="encrypt-keys" id="encrypt_key_list_2"></select>			
 						<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 						<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
-						<input id="encrypt_button_2" type="submit" value="Encrypt" />
+						<input id="encrypt_button_2" class="button light_bg" type="submit" value="Encrypt" />
 					</fieldset>
 				</form>
 			</section>
@@ -174,7 +174,7 @@
 					<select name="decrypt-keys" id="decrypt_key_list"></select>
 					<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 					<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
-					<input id="decrypt_button" type="submit" value="Decrypt" />
+					<input id="decrypt_button"class="button -bg_dark"  type="submit" value="Decrypt" />
 				</fieldset> 
 			</form>
 			</section>
