--- a/index.html
+++ b/index.html
@@ -124,10 +124,7 @@
 			<h2>Encryption</h2>
 			<!-- <p>Please enter the text you want to encrypt, and select a key to encrypt it.</p> -->
 
-			<section id="input_section_textfield">								
-				<div class="table-row">
-					<h3 class="table-cell">Input</h3>
-				</div>				
+			<section id="input_section_textfield">										
 				<form action="#" id="encrypt_form">
 					<textarea name="plain-input" id="plain_input" cols="35" rows="5" placeholder="Type the message you want to encrypt here..."></textarea>
 					<fieldset class="cipher-key">
@@ -135,7 +132,7 @@
 						<select name="encrypt-keys" id="encrypt_key_list_2"></select>			
 						<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 						<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
-						<input id="encrypt_button_2" class="button light_bg" type="submit" value="Encrypt" />
+						<input id="encrypt_button_2" class="button light_bg" type="submit" value="Encrypt" onclick="this.blur()"/>
 					</fieldset>
 				</form>
 			</section>
@@ -155,10 +152,7 @@
 
 			<h2 class="">Decryption</h2>
 			<!-- <p>Please enter the text you want to decrypt, and select the key that was used to encrypt it.</p> -->
-			<section>
-				<div class="table-row">
-					<h3 class="table-cell">Input</h3>					
-				</div>
+			<section>				
 				<form action="#" id="decrypt_form">
 				<textarea name="encrypted-input" id="encrypted_input" cols="35" rows="5" placeholder="Paste the cipher text you want to decrypt here..."></textarea>
 				<fieldset id="" class="cipher-key">
@@ -166,7 +160,7 @@
 					<select name="decrypt-keys" id="decrypt_key_list"></select>
 					<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 					<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
-					<input id="decrypt_button"class="button -bg_dark"  type="submit" value="Decrypt" />
+					<input id="decrypt_button"class="button -bg_dark"  type="submit" value="Decrypt" onclick="this.blur()"/>
 				</fieldset> 
 			</form>
 			</section>
