adds styling to splash screen

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 		<div class="splash-screen bg-gradient -split ">
 			<div class="table-cell -v-align-middle h-100">
-				<a href="#encrypt">Encrypt?</a> or <a href="#decrypt">Decrypt</a>				
+				<a href="#encrypt" class="text-black">Encrypt</a> <span class="bg-white text-black">or</span><a href="#decrypt" class="text-white">Decrypt</a>				
 			</div>
 		</div>
 	</main>
