--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
 						<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
 						<div>
 							<span class="animated-border">
-							<input id="encrypt_button_2" class="button light_bg" type="submit"  onclick="this.blur()" />							
-								
+								<input id="encrypt_button" class="button light_bg" type="submit" />	
 							</span>
 						</div>
 						
@@ -166,7 +165,7 @@
 					<select name="decrypt-keys" id="decrypt_key_list"></select>
 					<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 					<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
-					<input id="decrypt_button"class="button -bg_dark"  type="submit" value="Decrypt" onclick="this.blur()"  />
+					<input id="decrypt_button"class="button -bg_dark"  type="submit" value="Decrypt"  />
 				</fieldset> 
 			</form>
 			</section>
