--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
 					<select name="decrypt-keys" id="decrypt_key_list"></select>
 					<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 					<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
-					<input id="decrypt_button"class="button -bg_dark"  type="submit" value="Decrypt"  />
+					<div>
+						<span class="animated-border">
+							<input id="decrypt_button"class="button -bg_dark"  type="submit" value="Decrypt"  />							
+						</span>
+					</div>
 				</fieldset> 
 			</form>
 			</section>
