adds back in value attr for encrypt button, was removed in error.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
 						<div>
 							<span class="animated-border">
-								<input id="encrypt_button" class="button light_bg" type="submit" />	
+								<input id="encrypt_button" class="button light_bg" type="submit" value="Encrypt" />	
 							</span>
 						</div>
 						
