adds active tab navigation styling using CSS and jQuery.

--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@
 		
 	</style>
 </head>
-<body class="">
-	
+<body class="">	
 	<nav>
-		<a href="#encrypt" id="tab_encrypt">Encrypt?</a> 
-		or 
-		<a href="#decrypt" id="tab_decrypt">Decrypt?</a>
+		<a href="#encrypt" id="tab_encrypt"  class="tab-navigation">Encrypt</a> 
+		<em>or</em> 
+		<a href="#decrypt" id="tab_decrypt" class="tab-navigation">Decrypt</a>
 
 	</nav>
 	<main class="h-100">
@@ -118,9 +117,8 @@
 				</fieldset>
 			</section>
 		</section>		 -->
-
 		<section id="encrypt" class="encryption">
-			<div class="box-shadow-3 -fake -blck">&nbsp;</div>
+			<div class="box-shadow-3 -fake -black">&nbsp;</div>
 			<h2>Encryption</h2>
 			<!-- <p>Please enter the text you want to encrypt, and select a key to encrypt it.</p> -->
 			<section id="input_section_textfield">										
