updates some ID selectors

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<h3>Output</h3>
 				<fieldset>
 					<legend class="block-center">&nbsp;Your <em>encrypted</em> message:&nbsp;</legend>
-					<output id="encrypted_output_2" name="encrypted-output" for="plain_input encrypt_key_list_2" form="encrypt_form_textfield"></output>
+					<output id="encrypted_output" name="encrypted-output" for="plain_input encrypt_key_list_2" form="encrypt_form_textfield"></output>
 
 				</fieldset>
 				<button id="copy_encrypted" >Copy to clip-board</button>
